kubernetes/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pms-backend

spec:
  type: ClusterIP

  selector:
    app: pms-backend

  ports:
    - port: 80
      targetPort: http
